# Fulgora

./: .gitignore  README.md  pyproject.toml  run_array.job
src/fulgora/: __init__.py  api.py  basis_sets.py  cli.py
src/fulgora/input/: convert.py  headers.py
src/fulgora/runners/: g16.py
src/fulgora/util/: directory.py
